--- a/style.css
+++ b/style.css
@@ -1,52 +1,126 @@
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+html,body{
+   width:50%;
+   margin: 0 auto;
+   font-family: Arial, Helvetica, sans-serif;
+
 }
  
 .container{
-    width: 60vw;
-    height: 70vh;
-    border: 2px solid  red;
-    background-color: aliceblue;
-    border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    margin-top: 10vh;
-    
-
-
-    
+    width: 360px;
+      
 } 
-
-.main{
-    width: 100%;
-    height: 30%;
-    border: 1px solid red;
-}
-/* .content{
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* margin: 2em 0; */
-
-
-
-
- /* .add{
-    width: 25em;
-    height: 2em;
+#inputarea{
+    width: 300px;
+    height: 46px;
+    outline: none;
+    border: 1px solid black;
+    font-size: 30px;
+    vertical-align: middle;
     
-/* } */
-/* .submit{
-    width:10em;
-    height:2em ;
-    border-radius:5px;
-} */ */
+
+}
+
+#add{
+    height:50px ;
+    width: 90px;
+    border: 1px solid black;
+    vertical-align: middle;
+    font-size: 25px;
+}
+
+#tasks{
+    margin-top: 30px;
+}
+
+.paragraphAdded{
+    margin: 0;
+    font-size: 40px;
+} */
+
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+
+
+  body{
+    height: 35%;
+    top: 50px;
+  }
+  
+  ul {
+    margin: 0 50px;
+    padding: 0 40px;
+  }
+  
+  ul li {
+    cursor: pointer;
+    position: relative;
+    padding: 5px;
+    margin: 20px;
+    background: rgb(245, 198, 198);
+    font-size: 30px;
+    border-radius: 8px;
+  }
+  li:hover{
+    background-color: #ecd9d9;
+  }
+  
+  
+  
+ 
+  input {
+    border-radius: 5px;
+    background: rgb(237, 232, 232);
+    width: 70%;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    border: 2px solid #9ac1d4;
+  }
+  
+  input:focus{
+    outline: none;
+    border-color: rgb(249, 173, 173);
+  }
+  
+  .header {
+    margin: 50px 100px;
+    padding: 30px 40px;
+    background-color: rgb(247, 122, 122);
+    border-radius: 8px;
+    box-shadow: 0 5px 20px ;
+    text-align: center;
+  }
+  
+  .addBtn {
+    padding: 10px;
+    width: 20%;
+    background: #ecd9d9;
+    color: #555;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 3px;
+  }
+
+  
+  .addBtn:hover {
+    background-color: rgb(187, 174, 174);
+  }
+  
+
+
+
+
+
+ 
